--- a/css_layout/index.html
+++ b/css_layout/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="sticky">
             <ul class="main-nav">
                 <li><a href="">About</a></li>
                 <li><a href="">Products</a></li>
