--- a/vanila-js/movie-seat-booking/index.html
+++ b/vanila-js/movie-seat-booking/index.html
@@ -100,6 +100,8 @@
 
     <p class="text">You have selected <span id="count">0</span> seats for a price of $<span id="total">0</span></p>
 
+    <a href="#" class="clear-button" id="clearSeats">Clear Seats</a>
+
     <script src="script.js"></script>
 </body>
 </html>
