--- a/vanila-js/hangman/index.html
+++ b/vanila-js/hangman/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Hangman</h1>
     <p>Find the hidden word - Enter a letter</p>
+    <p id="hint"></p>
     <div class="game-container">
         <svg height="250" width="200" class="figure-container">
             <!-- Rod -->
@@ -41,7 +42,7 @@
     <div class="popup-container" id="popup-container">
         <div class="popup">
             <h2 id="final-message"></h2>
-            <button id="play-button">Play Again</button>
+            <button id="play-again">Play Again</button>
         </div>
     </div>
 
