--- a/vanila-js/new-year-countdown/index.html
+++ b/vanila-js/new-year-countdown/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="year" id="year"></div>
-    <h1>New Year Countdown</h1>
+    <h1>Birthday Countdown</h1>
     
     <div id="countdown" class="countdown">
         <div class="time">
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <!-- <img src="./img/spinner.gif" alt="loading..." id="loading" class="loading"> -->
+    <img src="./img/spinner.gif" alt="loading..." id="loading" class="loading">
     <script src="script.js"></script>
 </body>
 </html>
