--- a/vanila-js/sortable-list/index.html
+++ b/vanila-js/sortable-list/index.html
@@ -9,9 +9,10 @@
     <title>Top 10 high population countries</title>
 </head>
 <body>
-    <h1>10 Richest People</h1>
+    <h1>Population Ranking</h1>
     <p>Drag and drop the items into their corresponding spots</p>
     <ul class="draggable-list" id="draggable-list"></ul>
+    <p id='message'>You can try <span id="hp"></span> times</p>
     <button class="check-btn" id="check">
         Check Order
         <i class="fas fa-paper-plane"></i>
